# flir_020221

./: README.md
FLIR_TOOLS/ir_extractor/: CMakeLists.txt  package.xml
FLIR_TOOLS/ir_extractor/launch/: extract_falsecolor_ir.launch  extract_falsecolor_ir_and_rgb.launch
FLIR_TOOLS/ir_extractor/src/: false_color.cpp  ir_saver.cpp  rgb_saver.cpp
FLIR_TOOLS/ir_viewer/: package.xml
FLIR_TOOLS/ir_viewer/devel/.private/catkin_tools_prebuild/: .catkin  .rosinstall  local_setup.sh
FLIR_TOOLS/ir_viewer/devel/.private/catkin_tools_prebuild/lib/pkgconfig/: catkin_tools_prebuild.pc
FLIR_TOOLS/ir_viewer/devel/.private/catkin_tools_prebuild/share/catkin_tools_prebuild/cmake/: catkin_tools_prebuildConfig.cmake
FLIR_TOOLS/ir_viewer/include/: falsecolor.h
FLIR_TOOLS/ir_viewer/launch/: extract_falsecolor_ir.launch
